--- a/src/Propose.Frontend/src/app/ideas/idea-item.component.html
+++ b/src/Propose.Frontend/src/app/ideas/idea-item.component.html
@@ -1,4 +1,6 @@
 <p></p>
+
+<div class="idea-html-body"></div>
 <a class="entity-item-edit">Edit</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a class="entity-item-view">View</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a class="entity-item-delete">Delete</a>
