--- a/src/Propose.Frontend/src/app/ideas/idea-item.component.scss
+++ b/src/Propose.Frontend/src/app/ideas/idea-item.component.scss
@@ -8,8 +8,10 @@ ce-idea-item {
     position:relative;
     float:left;
     margin:10px;
-    background-color:azure;
+    background-color:#fff;
     padding:10px;
+    border: 0.5px solid rgba(0,0,0,0.25);
+    box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.15);
 }
 
 ce-idea-item:after {
