add realtime updating

--- a/src/Propose.Frontend/src/app/shared/header.component.scss
+++ b/src/Propose.Frontend/src/app/shared/header.component.scss
@@ -55,7 +55,9 @@ ce-header {
     ce-link.settings,
     ce-link.settings:hover,
     ce-link.register,
-    ce-link.register:hover {
+    ce-link.register:hover,
+    ce-link.change-password,
+    ce-link.change-password:hover {
         border-bottom:none;
     }
 
