--- a/src/Propose.Frontend/src/app/shared/header.component.html
+++ b/src/Propose.Frontend/src/app/shared/header.component.html
@@ -5,6 +5,7 @@
         <ce-link routesegments='["ideation","list"]' route-name="ideation-list" auth-required>ideations</ce-link>
     </div>
     <div class="header-right">
+        <ce-link routesegments='["change-password"]' class="change-password" auth-required>change password</ce-link>
         <ce-link routesegments='["login"]' class="logout" auth-required>logout</ce-link>
         <ce-link routesegments='["login"]' class="login" anonymous-required>login</ce-link>        
         <ce-link routesegments='["register"]' class="register" anonymous-required>register</ce-link>
