--- a/src/Propose.Frontend/src/app/ideas/idea-edit.component.html
+++ b/src/Propose.Frontend/src/app/ideas/idea-edit.component.html
@@ -1,18 +1,28 @@
 <h2></h2>
 
-<h3>Ideation</h3>
-<select></select>
+<ce-tabs>
+    <div class="tab-title"><h3>General</h3></div>
+    <div class="tab-title"><h3>Images</h3></div>
+    <div class="tab-title"><h3>Links</h3></div>
+    <div class="tab-panel">
+        <h3>Ideation</h3>
+        <select></select>
 
-<h3>Name</h3>
-<input class="idea-name" />
+        <h3>Name</h3>
+        <input class="idea-name" />
 
-<h3>Idea</h3>
-<div class="idea-html-body"></div>
+        <h3>Idea</h3>
+        <div class="idea-html-body"></div>
 
-<h3>Idea Description</h3>
-<div class="idea-html-description"></div>
+        <h3>Idea Description</h3>
+        <div class="idea-html-description"></div>
 
 
-<ce-button class="save-button">Save</ce-button>
-<ce-button class="delete-button">Delete</ce-button>
+        <ce-button class="save-button">Save</ce-button>
+        <ce-button class="delete-button">Delete</ce-button>
+    </div>
+    <div class="tab-panel"></div>
+    <div class="tab-panel"></div>
+</ce-tabs>
+
 
