images, links and notifications

--- a/src/Propose.Frontend/src/app/ideas/idea-edit.component.html
+++ b/src/Propose.Frontend/src/app/ideas/idea-edit.component.html
@@ -17,12 +17,20 @@
         <h3>Idea Description</h3>
         <div class="idea-html-description"></div>
 
-
         <ce-button class="save-button">Save</ce-button>
         <ce-button class="delete-button">Delete</ce-button>
     </div>
-    <div class="tab-panel"></div>
-    <div class="tab-panel"></div>
+
+    <div class="tab-panel">
+        <ce-digital-asset-edit-embed></ce-digital-asset-edit-embed>
+        <ce-digital-asset-list-embed></ce-digital-asset-list-embed>
+    </div>
+
+    <div class="tab-panel">
+        <ce-link-edit-embed></ce-link-edit-embed>
+        <ce-link-list-embed></ce-link-list-embed>
+    </div>
+
 </ce-tabs>
 
 
