--- a/src/Propose.Frontend/src/app/digital-assets/digital-asset-edit-embed.component.html
+++ b/src/Propose.Frontend/src/app/digital-assets/digital-asset-edit-embed.component.html
@@ -1,7 +1,8 @@
 <h2></h2>
 
-<h3>Name</h3>
-<input class="digital-asset-name" />
+<h3>Image Url</h3>
+
+<ce-digital-asset-url-input class="digital-asset-url"></ce-digital-asset-url-input>
 <ce-button class="save-button">Save</ce-button>
 <ce-button class="delete-button">Delete</ce-button>
 
