--- a/src/Propose.Frontend/src/app/digital-assets/digital-asset-list-embed.component.html
+++ b/src/Propose.Frontend/src/app/digital-assets/digital-asset-list-embed.component.html
@@ -1,2 +1,2 @@
-<h2>Digital Asset List</h2>
-<ce-link class="digital-asset-create" routesegments='["digital-asset","create"]'>CREATE DIGITAL_ASSET</ce-link>
+<h2>Image List</h2>
+<ce-link class="digital-asset-create" routesegments='["digital-asset","create"]'>CREATE IMAGE</ce-link>
