master detail embed

--- a/src/Propose.Frontend/src/app/links/link-edit-embed.component.html
+++ b/src/Propose.Frontend/src/app/links/link-edit-embed.component.html
@@ -2,6 +2,10 @@
 
 <h3>Name</h3>
 <input class="link-name" />
+
+<h3>Url</h3>
+<input class="link-url" />
+
 <ce-button class="save-button">Save</ce-button>
 <ce-button class="delete-button">Delete</ce-button>
 
